# autorace2025

./: .gitignore  BUILD_GUIDE.md  CAMERA_CALIBRATION.md  DEBUG_LANE_STEP_BY_STEP.md  FIX_CAMERA_PERMISSION.md  GITHUB_계정_없이_다운로드.md  GIT_WORKFLOW.md  IMU_실제데이터_사용법.md  LANE_DEBUG_GUIDE.md  LANE_DETECTION_GUIDE.md  MIGRATION_COMPLETE.md  ODOMETRY_SETUP.md  PLANNING_MIGRATION.md  QUICK_RUN.txt  QUICK_START.md  QUICK_START_SIMPLE.md  README.md  README_SENSORS.md  RUN_LANE_DETECTION.md  RUN_VISION_PLANNING.md  TERMINAL_COMMANDS.txt  TEST_LANE_DETECTION.md  TROUBLESHOOTING.md  VISION_ONLY_GUIDE.md  requirements.txt  run_all.sh
src/autorace_planning/: CMakeLists.txt  package.xml
src/autorace_planning/config/: costmap_common.yaml  costmap_common_vision.yaml  costmap_common_vision_scan.yaml  dwa_local_planner.yaml  global_costmap.yaml  local_costmap.yaml
src/autorace_planning/launch/: lane_perception.launch  move_base_core.launch  move_base_vision.launch  planning_viz.launch
src/autorace_planning/scripts/: lane_detector_node.py  send_goal.py
src/main/launch/: lane_detection_only.launch  main.launch
src/main/src/: detect_obstacles.py  lane_detection_node.py  lane_detection_only.py  main_run.py  rubber_cone.py
src/rplidar_ros/launch/: rplidar.launch  rplidar_s1.launch
src/vesc/vesc_driver/src/: vesc_driver.cpp
src/wego_bringup/: CMakeLists.txt  README.md  package.xml  setup.py
src/wego_bringup/config/: wego_autonomous.rviz
src/wego_bringup/launch/: autonomous_stack.launch  minimal.launch  odometry.launch
src/wego_bringup/scripts/: dummy_odom_node.py  real_odom_node.py  simple_imu_publisher.py
src/wego_control/: CMakeLists.txt  README.md  package.xml  setup.py
src/wego_control/config/: control_params.yaml
src/wego_control/launch/: control.launch
src/wego_control/scripts/: controller_node.py  vesc_bridge_node.py
src/wego_planning/: CMakeLists.txt  README.md  package.xml  setup.py
src/wego_planning/config/: planner_params.yaml
src/wego_planning/config/move_base/: costmap_common.yaml  costmap_common_vision.yaml  costmap_common_vision_scan.yaml  dwa_local_planner.yaml  global_costmap.yaml  local_costmap.yaml
src/wego_planning/launch/: planner.launch
src/wego_planning/launch/move_base/: move_base_core.launch  move_base_vision.launch  planning_viz.launch
src/wego_planning/scripts/: local_planner_node.py  path_planner_node.py  path_planner_with_lane.py  send_goal.py
src/wego_vision/: CMakeLists.txt  README.md  package.xml  setup.py
src/wego_vision/calibration/: .gitkeep  wego_camera.yaml
src/wego_vision/config/: camera_params.yaml  lane_detection_params.yaml  lane_detection_params_hybrid.yaml  lane_detection_params_indoor.yaml  lane_detection_params_outdoor.yaml  lane_simple_params.yaml
src/wego_vision/launch/: vision_pipeline.launch
src/wego_vision/msg/: LaneInfo.msg
src/wego_vision/scripts/: camera_node.py  detection_node.py  fusion_node.py  lane_detection_edge_based.py  lane_detection_hybrid.py  lane_detection_node.py  lane_detection_simple.py  simple_camera_publisher.py
