<?xml version="1.0"?>
<package format="2">
  <name>autorace_planning</name>
  <version>0.0.1</version>
  <description>Move_base planning configs and tools</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>move_base</depend>
  <depend>move_base_msgs</depend>
</package>
