<?xml version="1.0"?>
<package format="2">
  <name>autorace_planning</name>
  <version>0.0.1</version>
  <description>Move_base planning configs and tools</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS core -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- move_base -->
  <depend>move_base</depend>
  <depend>move_base_msgs</depend>

  <!-- Vision / Image -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- TF / TF2 -->
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Tools (relay/throttle) -->
  <exec_depend>topic_tools</exec_depend>
</package>
