<?xml version="1.0"?>
<package format="3">
  <name>wego_control</name>
  <version>0.1.0</version>
  <description>WeGO 차량 제어 패키지 - 모터 및 조향 제어</description>

  <maintainer email="wego@example.com">WeGO Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Python 3 지원 -->
  <exec_depend>rospy</exec_depend>

  <!-- ROS 메시지 의존성 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>

  <!-- 추가 의존성 -->
  <exec_depend>python3-numpy</exec_depend>

  <export>
  </export>
</package>

