<?xml version="1.0"?>
<package format="3">
  <name>wego_planning</name>
  <version>0.1.0</version>
  <description>WeGO 경로 계획 패키지 - 전역/지역 경로 생성</description>

  <maintainer email="wego@example.com">WeGO Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Python 3 지원 -->
  <exec_depend>rospy</exec_depend>

  <!-- ROS 메시지 의존성 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <!-- 추가 의존성 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
  </export>
</package>

